--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Ananya Ipsita # your name (or website title) here
+logo: "/images/AnanyaIpsita.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Ph.D. Candidate 
   <br><br>
-  Second description 
+  Purdue University
+  <br><br>
+  aipsita (at) purdue.edu
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
