--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   <a href="https://www.linkedin.com/in/ananya-ipsita-81a16139">View My LinkedIn Profile</a> 
   
-remote_theme: yaoyao-liu/minimal-light
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
