--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,11 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   aipsita (at) purdue.edu
   <br>
-  <a href="https://www.linkedin.com/in/ananya-ipsita-81a16139">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/ananya-ipsita-81a16139">My LinkedIn Profile</a> 
   <br>
-  <a href="https://scholar.google.com/citations?user=8D7cYcUAAAAJ&hl=en&oi=ao">View My Google Scholar Profile</a> 
+  <a href="https://scholar.google.com/citations?user=8D7cYcUAAAAJ&hl=en&oi=ao">My Google Scholar Profile</a>
+  <br>
+  <a href="/pdf/CV - Ananya Ipsita.pdf">Curriculum Vitae</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
