--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ananya Ipsita # your name (or website title) here
-logo: "/images/AnanyaIpsita.png?raw=true" # your photo (or logo) here
+logo: "/images/Ananya Ipsita.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Ph.D. Candidate 
   <br>
