--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   Purdue University
   <br>
-  aipsita (at) purdue.edu
+  aipsita (at) purdue (dot) edu
   <br>
   <a href="https://www.linkedin.com/in/ananya-ipsita-81a16139">My LinkedIn Profile</a> 
   <br>
