--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ affiliation: >
   Purdue University
 
 location: >
-  Mechanical Engieering Building, Room 3164<br/>
+  Mechanical Engineering Building, Room 3164<br/>
   585 Purdue Mall<br/>
   West Lafayette, IN 47907
 
