--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -5,7 +5,7 @@
   github: https://github.com/aipsita
   researchgate: https://www.researchgate.net/profile/Ananya_Ipsita
   scholar: https://scholar.google.com/citations?user=8D7cYcUAAAAJ&hl=en&oi=ao
-  cv: papers/CV.pdf
+  cv: papers/CV - Ananya Ipsita.pdf
   # Change the items in "education" you have (up to 6)
   education:
     [
