--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -1,7 +1,7 @@
 - name: Ananya Ipsita
   photo: headshot.jpg
-  info: Ph.D. Candidate, Purdue University
-  email: aipsita@purdue.edu
+  info: Assistant Professor of Smart Manufacturing, College of Innovation and Technology, The University of Michigan-Flint
+  email: aipsita@umich.edu
   github: https://github.com/aipsita
   researchgate: https://www.researchgate.net/profile/Ananya_Ipsita
   scholar: https://scholar.google.com/citations?user=8D7cYcUAAAAJ&hl=en&oi=ao
