--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -29,7 +29,7 @@ concurrency:
 jobs:
   # Build job
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04 #change to ubuntu-latest when it is supported by actions used in the workflow
     steps:
       - name: Checkout
         uses: actions/checkout@v4
